<resources>
    <string name="app_name">Assistant</string>
    <string name="nothing_today">Nothing planned for Today!</string>
    <string name="today">Today</string>
    <string name="tasks">Tasks</string>
    <string name="birthdays">Birthdays</string>
    <string name="notes">Notes</string>
    <string name="lists">Lists</string>
    <string name="task">Task</string>
    <string name="birthday">Birthday</string>
    <string name="note">Note</string>
    <string name="list">List</string>
    <string name="new_task">New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="new_birthday">New Birthday</string>
    <string name="name">Name</string>
    <string name="new_note">New Note</string>
    <string name="new_list">New List</string>
    <string name="element">Element</string>
    <string name="new_item">+ New item</string>
    <string name="task_nothing">No task planned</string>
    <string name="no_description">No Description.</string>
    <string name="favorite">Favorite</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_birthday_saved">No birthday saved</string>
</resources>